WEB: Fix wiggle on mobile devices
On mobile devices, you could still scroll a little bit to the right, this happened because the menu icon was slightly off-screen

--- a/css/menu.css
+++ b/css/menu.css
@@ -80,7 +80,7 @@ div.menugroup a:hover {
   /* Nav Trigger */
   .nav-trigger {	
 	/* critical styles - hide the checkbox input */
-	position: absolute;
+	/* position: absolute; */
 	clip: rect(0, 0, 0, 0);
 	color: rgb(130,29,6);
   }
